# Project-Template-Manager

./: .cursorignore  .gitignore  .todo  DEPLOYING.md  README.md  build_and_install.sh  find_todos.py  install.sh  install_extension.sh  package-lock.json  package.json  project_template_manager.code-workspace  pyproject.toml  temp.sh  todos_workspace.md
docs/: README.md
extensions/code-dependency-visualizer/: README.md  code-dependency-visualizer-1.0.0.vsix  find_unused_files.py  package-lock.json  package.json  test_module1.py  test_module3.py  tsconfig.json
extensions/code-dependency-visualizer/src/: graphWebviewProvider.ts  pythonDependencyAnalyzer.ts
extensions/codedependency_visualizer_claude/: .vscodeignore  README.md  codedependency-visualizer-0.0.1.vsix  codedependency-visualizer-1.0.0.vsix  codedependency-visualizer-1.1.0.vsix  find_unused_files.py  package-lock.json  package.json  test_module2.py
extensions/codedependency_visualizer_claude/src/: dependencyAnalyzer.ts  extension.ts  graphWebviewProvider.ts
extensions/codedependency_visualizer_gemini_cursor/: find_unused_files.py  package-lock.json  package.json  tsconfig.json
extensions/codedependency_visualizer_gemini_cursor/src/: extension.ts
extensions/project-template-manager/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  project-template-manager-1.5.0.vsix  project-template-manager-1.7.0.vsix  project-template-manager-1.7.1.vsix  project-template-manager-1.7.2.vsix  project-template-manager-1.8.0.vsix  project-template-manager-1.8.1.vsix
extensions/project-template-manager/src/: extension.ts  templateExplorer.ts
extensions/project-template-manager/templates/pythonic_template/: .pypirc.template  pyproject.toml
extensions/project-template-manager/templates/pythonic_template/project_src/configurations/: params.py  settings.py
extensions/project-template-manager/templates/pythonic_template/project_src/io/: data_loader.py
extensions/project-template-manager/templates/pythonic_template/setup_config/docker/: Dockerfile
extensions/project-template-manager/templates/pythonic_template/tests/: __init__.py
extensions/task-manager/: ICON_ALTERNATIVES.md  README.md  TROUBLESHOOTING.md  package-lock.json  package.json  sample-todos.js
extensions/task-manager/src/: extension.ts  todoItem.ts  todoProvider.ts
extensions/todo-task-tracker/: INTEGRATION.md  TROUBLESHOOTING.md  package-lock.json
extensions/todo-task-tracker/scripts/: find_todos.py
extensions/todo-task-tracker/src/: todoProvider.ts
extensions/vscode-extension/: package.json
extensions/vscode-extension/src/: templateExplorer.ts
python-project-template/src/: extension.ts
pythonic_template/: README.md  __init__.py
pythonic_template/setup_config/: .env.example
pythonic_template/src/configurations/: settings.py
pythonic_template/src/utils/: config.yaml
template_example/: setup.py
template_example/scripts/: install.sh  run_dashboard.sh
template_example/setup_config/: requirements.txt
template_example/src/configurations/: __init__.py
template_example/src/utils/: __init__.py  config.py
template_example/tests/: __init__.py
templates/claude_tsx_to_website/: install.sh
templates/claude_tsx_to_website/docs/: SETTING_UP_LOCAL_REACT.md  Troubleshooting.md
vscode-extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  project-template-manager-0.3.0.vsix  project-template-manager-0.4.0.vsix  project-template-manager-1.0.0.vsix  project-template-manager-1.1.0.vsix  project-template-manager-1.1.1.vsix  project-template-manager-1.2.1.vsix  project-template-manager-1.4.2.vsix  project-template-manager-1.4.5.vsix  project-template-manager-1.4.7.vsix  project-template-manager-1.4.8.vsix  project-template-manager2-1.0.0.vsix  python-project-template-0.0.1.vsix  tsconfig.json
vscode-extension/pythonic_template/: __init__.py  setup.py
vscode-extension/src/: extension.ts  templateExplorer.ts
vscode-extension/templates/: find_unused_files.py
vscode-extension/templates/pythonic_template/: .pypirc.template  pyproject.toml  requirements.txt
vscode-extension/templates/pythonic_template/project_src/: __init__.py  cli.py  main.py
vscode-extension/templates/pythonic_template/project_src/configurations/: __init__.py  settings.py
vscode-extension/templates/pythonic_template/project_src/visualization/: __init__.py  app.py
vscode-extension/templates/pythonic_template/scripts/: install.sh
(+47 files in other folders)
