[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "te_koa"
version     = "0.1.0"
description = "A data science and machine learning framework for nursing research"
readme      = "README.md"
authors     = [ {name = "Artin Majdi", email = "msm2024@gmail.com"} ]
license     = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = ["nursing research", "healthcare", "AI", "medical analysis"]
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.urls]
Homepage      = "https://github.com/artinmajdi/te_koa"
Documentation = "https://github.com/artinmajdi/te_koa/docs"
Repository    = "https://github.com/artinmajdi/te_koa.git"
Issues        = "https://github.com/artinmajdi/te_koa/issues"

[project.scripts]
te_koa = "te_koa.main:main"
te_koa-dashboard = "te_koa.cli:run_dashboard"

[tool.setuptools]
packages = ["te_koa"]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
te_koa = ["**/*.py"]


