[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonic_template"
version = "1.0.0"
description = "A pythonic template for pythonic projects"
readme = "README.md"
requires-python = ">=3.10"
authors = [ {name = "name", email = "email@domain.com"} ]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dotenv>=0.9.9",
]

[tool.setuptools]

package-dir = {"" = "project_src"}
packages    = ["pythonic_template"]


[project.urls]
Homepage      = "https://github.com/username/pythonic_template"
Documentation = "https://pythonic-template.readthedocs.io/"
Repository    = "https://github.com/username/pythonic_template.git"
Issues        = "https://github.com/username/pythonic_template/issues"


[project.scripts]
ui = "pythonic_template.cli:run_script"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["project_src"]
addopts = "-v"
include-package-data = true
